# systemd-client

./: Cargo.toml
examples/: start_service_blocking.rs
scripts/: gen-interface.sh
src/: constants.rs  lib.rs  models.rs  templates.rs  utils.rs
src/manager/: proxy.rs
src/service/: proxy.rs
src/unit/: proxy.rs
tests/resources/: test.service
